2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update boost.m4.
	* boost.m4: Synchronizw with upstream.

2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update warnings.m4.
	* warning.m4: Avoid erroneous concatenation in recent Autoconf versions.

2010-01-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Add CORBA IDL generation rules.
	* idl.mk: New.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Add PACKAGE_TARNAME variable to pkgconfig file.
	* pkg-config.pc.in: Here.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix doxygendocdir value in pkg-config file.
	* pkg-config.pc.in: Here.

2010-01-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Add asciidoc related m4/mk files.
	* asciidoc.m4: New.
	* asciidoc.mk: New.

2009-12-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not assume in Kineo rules the library prefix.
	* kineo.mk: Here.

2009-12-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Autotest more robust.
	* autotest.at: Handle test binaries in relative	directories.
	* autotest.mk: Handle test suite in a non-standard directory.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation dependencies.
	* doxygen.mk: Make ``Doxyfile'' and ``Doxyfile.extra'' depends
	on ``config.status'' (make sure these files are regenerated if
	substituable values are changed such as the version number).

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix announce-gen download link.
	* announce-gen.mk: Fix download link.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix release type detection in SourceForge rules.
	* sf-doc.mk,
	* sf-release.mk: Fix regexp.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add release related Makefile rules.
	* announce-gen.mk: New.
	* dist-sign.mk: Copy from sf.mk.
	* sf-doc.mk: Copy from sf.mk.
	* sf-release.mk: Rename from sf.mk.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file generation rule.
	* rpm.mk: Here.
